# simply_files

./: Cargo.toml  license  readme.md
.github/workflows/: build_backend.yaml
backend/: .gitignore  Cargo.toml  config.example.toml
backend/src/: config.rs  download.rs  download_stream.rs  error.rs  main.rs  preview.rs  simply_packet.rs  speed_test.rs  sync.rs
backend/src/db/: file.rs  links.rs  mod.rs
backend/src/file_system/: local.rs  mod.rs  ssh.rs
backend/src/protected/: authenticate.rs  directory.rs  file.rs  file_system.rs  link.rs  logout.rs  mod.rs  path_to_id.rs  storage_limit.rs
backend/src/upload/: mod.rs  private.rs  public.rs  websocket.rs
cli/: Cargo.toml  proposal.md
cli/src/: access.rs  app.rs  args.rs  auth.rs  config.rs  get.rs  ls.rs  main.rs  rm.rs  upload.rs
client/: package-lock.json  package.json
client/src/: app.css
client/src/lib/: Delete.svelte  DropFile.svelte  FileEntry.svelte  FileHandler.svelte  FileList.svelte  NewDirectory.svelte  PathNavigator.svelte  Popup.svelte  QRCode.svelte  Queue.svelte  SpeedTest.svelte  TopStatusBar.svelte  auth.ts  directory.ts  file.ts  format.ts  index.ts  link.ts  metadata.ts  queue.ts  speed_test.ts  toast.ts  upload.ts
client/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
client/src/routes/d/[id]/: +page.server.ts  +page.svelte
client/src/routes/m/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
client/src/routes/m/[...path]/: +page.server.ts  +page.svelte
client/src/routes/m/[path]/: +page.svelte
client/src/routes/m/[x+2e]public_uploads/: +page.server.ts  +page.svelte
client/src/routes/u/[id]/: +page.server.ts  +page.svelte
sf_core/: Cargo.toml  simply_packet.md
sf_core/src/: lib.rs  simply_packet.rs
