[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1"
ssh2 = "0.9"
toml = "0.8.23"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.5", features = ["cors", "timeout"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
time = "0.3.41"
